# RPiPicoUartTest

LedSetViaUart/: CMakeLists.txt  main.cpp
MinimalPacketConnPico/: CMakeLists.txt  main.cpp
MinimalPacketConnPico/core/conn/minicom/: config.h  minicom.cpp  minicom.h
PythonUartSend/: main.py
